<resources>
    <string name="app_name">xpensinator</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="btnCapture">Capture Receipt</string>
    <string name="btnClear">Clear</string>
    <string name="btnGraph">Display Graph</string>
    <string name="btnCopy">Copy</string>
    <string name="btnFilter">Filter</string>
    <string name="btnEnter">Enter Expense</string>
    <string name="lblDate">Date Entered</string>
    <string name="lblAmount">Amount</string>
    <string name="lblNotes">Notes</string>
    <string name="lblExpCategory">Expense Category</string>
    <string name="lblBudget">Budget: </string>
    <string name="lblSetBudget">Set a Budget</string>
    <string name="lblExpensesList">List of Expenses</string>
    <string name="lblTotalExpenses">Total Expenses: </string>
    <string name="lblWelcome">Welcome, </string>
    <string name="lblRegistration">Register an Account</string>
    <string name="hntExtract">Scanned text will be displayed here</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="budget_guide_1">!! Budgeting Guide:
Figure out what you really need versus what you just want. This helps you make a smart budget.</string>
    <string name="budget_guide_2">!! Budgeting Guide:
The 50/30/20 rule encourages you to allocate your income based on your needs, wants, and savings.</string>
</resources>